tests/kiama/negative/name_errors/L2/4_forname1.ob
MODULE forname;

BEGIN
    FOR avar := 1 TO 2 DO
    END
END forname.
